# graphiq

./: LICENCE  README.md
graphiq/: index.html  package-lock.json  package.json  vite.config.ts
graphiq/src/: App.tsx  global.css
graphiq/src-tauri/: Cargo.toml  tauri.conf.json
graphiq/src-tauri/capabilities/: default.json
graphiq/src-tauri/src/: db.rs  engine.rs  hashing.rs  lib.rs  main.rs  models.rs
python_engine/: graphiq.py  test.py
