[package]
name = "graphiq"
version = "0.1.0"
description = "Trace. Compare. Explain."
authors = ["Sitanshu"]
edition = "2026"
license = "Apache-2.0"

[lib]
name = "graphiq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.3"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["full"] }