[package]
name = "graphiq"
version = "0.1.0"
description = "Designed for developers in data."
authors = ["Sitanshu Shretha"]
edition = "2021"

[lib]
name = "graphiq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = { version = "1.5", features = ["mmap"] }
rayon = "1.8" # For parallelizing multiple file hashes
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] } # For timestamps
uuid = { version = "1.6", features = ["v4", "serde"] } # Unique IDs for runs
